--- a/Work.html
+++ b/Work.html
@@ -3,24 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
     <meta property="og:title" content="Edward's Developer Portfolio" />
     <meta
       property="og:description"
       content="Welcome to Edward's Portfolio, a frontend developer"
     />
-    <meta property="og:image" content="/images/card.jpg" />
+    <meta property="og:image" content="./images/card.jpg" />
     <meta property="og:url" content="http://127.0.0.1:5500/finalproject.html" />
     <meta property="og:type" content="website" />
 
     <!-- Twitter Card Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Edward's Developer Portfolio" />
+    <meta name="twitter:title" content="Edward's Work Portfolio" />
     <meta
       name="twitter:description"
-      content="Portfolio of Edward, a frontend developer."
+      content="Portfolio of Edward, a frontend developer's Work Portfolio."
     />
-    <meta name="twitter:image" content="/images/card.jpg" />
+    <meta name="twitter:image" content="./images/card.jpg" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       rel="stylesheet"
@@ -95,7 +95,7 @@
         <h1 class="font-bold text-3xl pt-16 pb-8">Work</h1>
         <div class="md:flex flex-row gap-4">
           <img
-            src="/images/dashboard.png"
+            src="./images/dashboard.png"
             alt="Designing Dashboards"
             class="md:w-40 h-auto rounded-md"
           />
@@ -120,7 +120,7 @@
         <!-- vibrant portraits... -->
         <div class="hidden md:flex flex-row gap-4">
           <img
-            src="/images/Rectangle 32.png"
+            src="./images/Rectangle 32.png"
             alt="Vibrant Portraits of 2020"
             class="md:w-40 h-auto rounded-md"
           />
@@ -145,7 +145,7 @@
         <!-- 36 days of Malayalam... -->
         <div class="hidden md:flex flex-row gap-4">
           <img
-            src="/images/Rectangle 34.png"
+            src="./images/Rectangle 34.png"
             alt="36 Days of Malayalam type"
             class="md:w-40 h-auto rounded-md"
           />
@@ -170,7 +170,7 @@
         <!-- components -->
         <div class="hidden md:flex flex-row gap-4">
           <img
-            src="/images/components.png"
+            src="./images/components.png"
             alt="36 Days of Malayalam type"
             class="md:w-40 h-auto rounded-md"
           />
@@ -195,7 +195,7 @@
         <!-- designing landing pages -->
         <div class="md:hidden">
           <img
-            src="/images/landing pages.png"
+            src="./images/landing pages.png"
             alt="36 Days of Malayalam type"
             class="md:w-40 h-auto rounded-md"
           />
