--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
     <meta property="og:title" content="Edward's Developer Portfolio" />
     <meta
       property="og:description"
       content="Welcome to Edward's Portfolio, a frontend developer"
     />
-    <meta property="og:image" content="/images/card.jpg" />
+    <meta property="og:image" content="./images/card.jpg" />
     <meta property="og:url" content="http://127.0.0.1:5500/finalproject.html" />
     <meta property="og:type" content="website" />
 
@@ -20,7 +20,7 @@
       name="twitter:description"
       content="Portfolio of Edward, a frontend developer."
     />
-    <meta name="twitter:image" content="/images/card.jpg" />
+    <meta name="twitter:image" content="./images/card.jpg" />
     <title>Home</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link
@@ -106,7 +106,7 @@
             veniam consequat sunt nostrud amet.
           </p>
           <a
-            href="/resume/EDDY CV.pdf"
+            href="./resume/EDDY CV.pdf"
             download="/resume/EDDY CV.pdf"
             class="inline-flex items-center px-6 py-3 bg-[#FF6464] text-white font-medium text-xl mt-5"
           >
@@ -115,7 +115,7 @@
         </div>
         <div class="mb-8 md:w-1/2 mt-8 md:mt-0 md:flex md:justify-end">
           <img
-            src="/images/edd.jpg"
+            src="./images/edd.jpg"
             alt="Eddy's image"
             class="w-60 h-60 rounded-full"
           />
@@ -167,7 +167,7 @@
         <div class="mt-6 space-y-6">
           <div class="flex flex-col md:flex-row items-center p-6">
             <img
-              src="/images/Rectangle 30.png"
+              src="./images/Rectangle 30.png"
               alt="Designing Dashboards"
               class="w-full md:w-40 h-auto rounded-md"
             />
@@ -191,7 +191,7 @@
 
           <div class="flex flex-col md:flex-row items-center p-6">
             <img
-              src="/images/Rectangle 32.png"
+              src=",/images/Rectangle 32.png"
               alt="Vibrant Portraits of 2020"
               class="w-full md:w-40 h-auto rounded-md"
             />
@@ -215,7 +215,7 @@
 
           <div class="flex flex-col md:flex-row items-center p-6">
             <img
-              src="/images/Rectangle 34.png"
+              src="./images/Rectangle 34.png"
               alt="36 Days of Malayalam type"
               class="w-full md:w-40 h-auto rounded-md"
             />
