--- a/work_detail.html
+++ b/work_detail.html
@@ -3,24 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
     <meta property="og:title" content="Edward's Developer Portfolio" />
     <meta
       property="og:description"
-      content="Welcome to Edward's Portfolio, a frontend developer"
+      content="Welcome to Edward's Portfolio, a frontend developer's Work detail"
     />
-    <meta property="og:image" content="/images/card.jpg" />
+    <meta property="og:image" content="./images/card.jpg" />
     <meta property="og:url" content="http://127.0.0.1:5500/finalproject.html" />
     <meta property="og:type" content="website" />
 
     <!-- Twitter Card Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Edward's Developer Portfolio" />
+    <meta name="twitter:title" content="Edward's Work detail" />
     <meta
       name="twitter:description"
       content="Portfolio of Edward, a frontend developer."
     />
-    <meta name="twitter:image" content="/images/card.jpg" />
+    <meta name="twitter:image" content="./images/card.jpg" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       rel="stylesheet"
@@ -111,7 +111,7 @@
             </p>
 
             <!-- first image -->
-            <img class="mt-8 mb-8" src="/images/usability1.png" alt="Dashboard">
+            <img class="mt-8 mb-8" src="./images/usability1.png" alt="Dashboard">
             </div>
 
             <!-- Heading 1 Heading 2 -->
@@ -125,11 +125,11 @@
                 </p>
 
                 <!-- second image -->
-                <img class="mt-8 mb-8" src="/images/usability2.png" alt="a car">
+                <img class="mt-8 mb-8" src="./images/usability2.png" alt="a car">
             </div>
             <div>
               <!-- third image -->
-                <img class="mt-16 mb-16" src="/images/usability3.png" alt="your order">
+                <img class="mt-16 mb-16" src="./images/usability3.png" alt="your order">
             </div>
         <div>  
         </main>
