--- a/Blog.html
+++ b/Blog.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
     <meta property="og:title" content="Edward's Blog" />
     <meta
       property="og:description"
       content="Welcome to Edward's Blog, a frontend developer"
     />
-    <meta property="og:image" content="/images/card.jpg" />
+    <meta property="og:image" content="./images/card.jpg" />
     <meta property="og:url" content="http://http://127.0.0.1:5500/Blog.html" />
     <meta property="og:type" content="website" />
 
@@ -20,7 +20,7 @@
       name="twitter:description"
       content="Portfolio of Edward, a frontend developer."
     />
-    <meta name="twitter:image" content="/images/card.jpg" />
+    <meta name="twitter:image" content="./images/card.jpg" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
