--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
           <div class="flex flex-col md:flex-row items-center p-6">
             <img
-              src=",/images/Rectangle 32.png"
+              src="./images/Rectangle 32.png"
               alt="Vibrant Portraits of 2020"
               class="w-full md:w-40 h-auto rounded-md"
             />
