--- a/index.html
+++ b/index.html
@@ -66,21 +66,21 @@
         <ul class="flex justify-between gap-4 font-medium">
           <li>
             <a
-              href="#"
+              href="Work.html"
               class="text-lg hover:underline decoration-blue-500 decoration-2 cursor-pointer"
               >Works</a
             >
           </li>
           <li>
             <a
-              href="#"
+              href="Blog.html"
               class="text-lg hover:underline decoration-blue-500 decoration-2 cursor-pointer"
               >Blog</a
             >
           </li>
           <li>
             <a
-              href="#"
+              href="work_detail.html"
               class="text-lg hover:underline decoration-blue-500 decoration-2 cursor-pointer"
               >Contact</a
             >
@@ -254,7 +254,7 @@
           <i class="fab fa-linkedin"></i>
         </a>
       </div>
-      <p class="mt-4">© 2020 All rights reserved</p>
+      <p class="mt-4">© 2024 All rights reserved</p>
     </footer>
   </body>
 </html>
